# mcp-test-stepfun

./: .gitignore  README.md  mcp_secrets.json.example  pyproject.toml  start_mcp.bat
docs/: DEVELOPMENT_GUIDE.md  FASTMCP_STREAMING_ANALYSIS.md  MCP_TRANSPORT_MODES.md  README.md  SSE_PROGRESS_DESIGN_NOTES.md  STEPFUN_STREAMING_LIMITATION.md
docs/_archive/: COMPREHENSIVE_FULL_TEST_DESIGN.md  COMPREHENSIVE_TEST_GUIDE.md  COMPREHENSIVE_TEST_V2.md  COMPREHENSIVE_TEST_V3.md  COMPREHENSIVE_TEST_V4.md  COMPREHENSIVE_TEST_V4_REPORT.md  COMPREHENSIVE_TEST_V5.md  COMPREHENSIVE_TEST_V5_RESULT.md  CURRENT_CODE_REVIEW.md  FULL_TEST_EXECUTION_GUIDE.md  FULL_TEST_REPORT.md  FULL_TEST_REPORT_V2.md  GAP_ANALYSIS_2025-11-25.md  IMprovements.md  MCP_2025-11-25_SPEC_SUMMARY.md  MCP_ELICITATION_SAMPLING_2025.md  MCP_FULL_TEST_EXPERIENCE_20260310.md  MCP_HTTP_SECURITY_2025.md  MCP_PYTHON_SDK_ANALYSIS.md  MCP_TASKS_IMPLEMENTATION.md  MCP_TOOLS_SCHEMA_2025.md  SESSION_MANAGEMENT_TEST_GUIDE.md  SESSION_MANAGEMENT_TEST_REPORT.md  STDIO_TEST_GUIDE.md  STDio_test_report.md  STEPFUN_MCP_CAPABILITIES.md  STEPFUN_MCP_CAPABILITIES_SUMMARY.md  STEPFUN_MCP_CONFIG.md  STEPFUN_MCP_TEST_EXPERIENCE.md  STEPFUN_STREAMING_LIMITATION.md  STREAMABLE_HTTP_TEST_GUIDE.md  STREAMABLE_HTTP_TEST_REPORT.md  TEST_FOR_STEPFUN.md  (+4 more)
http/: full_test_server.py
sdk/: README.md
sdk/http/: README.md  pyproject.toml  quick_test.py  run_test.py  run_test_sse.py  test_all.py
sdk/http/src/mcp_http_sdk/: __init__.py  server.py
sdk/uvx/: README.md  pyproject.toml
sdk/uvx/src/mcp_uvx_sdk/: __init__.py  server.py
(+57 files in other folders)
