[project]
name = "mcp-test-stepfun"
version = "0.1.0"
description = "MCP Test Server for Stepfun Desktop"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mcp-test = "mcp_test_stepfun:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_test_stepfun"]
