[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-http-sdk"
version = "1.0.0"
description = "MCP 测试服务器 - HTTP 传输 (官方 SDK)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mcp-http-sdk = "mcp_http_sdk.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_http_sdk"]
