[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-uvx-sdk"
version = "1.1.0"
description = "MCP 测试服务器 - UVX 传输 (官方 SDK)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
]

[project.scripts]
mcp-uvx-sdk = "mcp_uvx_sdk.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_uvx_sdk"]
